# app/routes/categorys.js
@@ -1,10 +1,15 @@
 'use strict';
 
-var router = require('express').Router();
-var CategorysController = require('../controllers/categorys');
+const router = require('express').Router();
+const CategorysController = require('../controllers/categorys');
+const authMiddleware = require('../middlewares/auth');
 
 router.get('/', function(req, res) {
     CategorysController.list(req, res);
+});
+
+router.post('/', authMiddleware.getToken, authMiddleware.getTokenAdmin, function(req, res) {
+    CategorysController.create(req, res);
 });
 
 router.get('/:id/places', function(req, res) {
